--- a/Flixr_App2.csproj
+++ b/Flixr_App2.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="dcsoup" Version="1.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
